Restructured error handling
